--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
           <div class="row mt-2">
             <h2 class="h2 fw-light mb-4">Bio</h2>
             <div class="col-sm-5">
-              <div </i> Age</div>
+              <!--<div </i> Age</div>-->
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">27</div>
+              <!--<div class="pb-2">27</div>-->
             </div>
             <div class="col-sm-5">
               <div </i> Email</div>
@@ -554,7 +554,7 @@ I wish him good luck for all the future endeavours and that he continues to lear
             <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> contact.kruthagama@gmail.com</div>
           </div>
           <div class="mt-5 d-print-none">
-             
+<!--             
 <form
   action="https://formspree.io/f/mrgwkapk"
   method="POST"
@@ -579,25 +579,25 @@ I wish him good luck for all the future endeavours and that he continues to lear
   </label></div>
   <button class="btn btn-info btn-block mb-4" type="submit">Send</button>
 </form>
- 
-<!--              
+--> 
+             
 <form action="https://formspree.io/f/mrgwkapk"
     method="POST">
   <div class="form-outline mb-4">
-    <input type="name" name="name" id="name" class="form-control" required/>
+    <input type="name" name="name"  class="form-control" required/>
     <label class="form-label" for="name">Name</label>
   </div>
   <div class="form-outline mb-4">
-    <input type="email" name="email" id="email" class="form-control" required/>
+    <input type="email" name="email"  class="form-control" required/>
     <label class="form-label" for="email">Email address</label>
   </div>
   <div class="form-outline mb-4">
-    <textarea class="form-control" style="resize: none;" name="message" id="message" rows="4" required></textarea>
+    <textarea class="form-control" style="resize: none;" name="message"  rows="4" required></textarea>
     <label class="form-label" for="message">Message</label>
   </div>
   <button class="btn btn-info btn-block mb-4" type="submit">Send</button>
 </form>
--->
+
           </div>
         </div>
 <div style="max-width:100%;overflow:hidden;color:red;width:500px;height:500px;"><div id="embedded-map-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Dallas+Downtown+Historic+District,+Dallas,+TX,+USA&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="google-map-code-enabler" href="https://kbj9qpmy.com/hrn" id="enable-maps-data">Hosting Right Now</a><style>#embedded-map-display img.text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div>
