--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <div </i> Email</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">contact.kruthagama@gmail.com</div>
+              <div class="pb-2">kruthagama.divakar@utdallas.edu<br>contact.kruthagama@gmail.com<</div>
             </div>  
             <div class="col-sm-5">
               <div </i> Phone</div>
