--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <div </i> Email</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">kruthagama.divakar@utdallas.edu<br>contact.kruthagama@gmail.com<</div>
+              <div class="pb-2">kruthagama.divakar@utdallas.edu<br>contact.kruthagama@gmail.com</div>
             </div>  
             <div class="col-sm-5">
               <div </i> Phone</div>
@@ -551,7 +551,7 @@ I wish him good luck for all the future endeavours and that he continues to lear
         <div class="col-md-5" data-aos="fade-left" data-aos-delay="200">
           <div class="mt-1">
             <div class="h6"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> +1-(206)-372-4492</div>
-            <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> contact.kruthagama@gmail.com</div>
+            <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> kruthagama.divakar@utdallas.edu<br>contact.kruthagama@gmail.com</div>
           </div>
           <div class="mt-5 d-print-none">
            
