--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ I wish him good luck for all the future endeavours and that he continues to lear
         <div class="col-md-5" data-aos="fade-left" data-aos-delay="200">
           <div class="mt-1">
             <div class="h6"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> +1-(206)-372-4492</div>
-            <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> kruthagama.divakar@utdallas.edu<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;contact.kruthagama@gmail.com</div>
+            <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> kruthagama.divakar@utdallas.edu<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;contact.kruthagama@gmail.com</div>
           </div>
           <div class="mt-5 d-print-none">
            
