--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
       <h2 class="h2 fw-light mb-4">Professional Skills</h2>
       <div class="row">
         <div class="col-md-6">
+          <div class="mb-3"><span class="fw-bolder">Leadership</span>
+            <div class="progress my-2 rounded" style="height: 20px">
+              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Master</div>
+            </div>
+          </div>
           <div class="mb-3"><span class="fw-bolder">Agile Methodologies</span>
             <div class="progress my-2 rounded" style="height: 20px">
               <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Master</div>
@@ -162,12 +167,7 @@
           </div>
           <div class="mb-3"><span class="fw-bolder">Project Management</span>
             <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Expert</div>
-            </div>
-          </div>
-          <div class="mb-3"><span class="fw-bolder">Product Management</span>
-            <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Advance</div>
+              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Master</div>
             </div>
           </div>
           <div class="mb-3"><span class="fw-bolder">Software Development Life Cycle</span>
@@ -175,9 +175,9 @@
               <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 85%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Expert</div>
             </div>
           </div>
-          <div class="mb-3"><span class="fw-bolder">Leadership</span>
+          <div class="mb-3"><span class="fw-bolder">Product Management</span>
             <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 95%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Master</div>
+              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Advance</div>
             </div>
           </div>
         </div>
@@ -224,6 +224,11 @@
               <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Master</div>
             </div>
           </div>
+        <div class="mb-3"><span class="fw-bolder">JIRA</span>
+            <div class="progress my-2 rounded" style="height: 20px">
+              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Expert</div>
+            </div>
+          </div>    
           <div class="mb-3"><span class="fw-bolder">MS-Excel</span>
             <div class="progress my-2 rounded" style="height: 20px">
               <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Expert</div>
@@ -231,14 +236,14 @@
           </div>
           <div class="mb-3"><span class="fw-bolder">Tableau</span>
             <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Advance</div>
+              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Advance</div>
             </div>
           </div>
-          <div class="mb-3"><span class="fw-bolder">JIRA</span>
+        <div class="mb-3"><span class="fw-bolder">Figma</span>
             <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Master</div>
+              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Beginner</div>
             </div>
-          </div>
+          </div>    
         </div>
         
       </div>
@@ -325,7 +330,7 @@
 
 <div class="shadow-1-strong bg-white my-5 p-5" id="experience">
     <div class="work-experience-section">
-      <h2 class="h2 fw-light mb-4">Organisational Experience</h2>
+      <h2 class="h2 fw-light mb-4">Organisation and Leadership Experience</h2>
       <div class="timeline">
         <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
           <div class="timeline-head px-4 pt-3">
