--- a/index.html
+++ b/index.html
@@ -559,7 +559,8 @@ I wish him good luck for all the future endeavours and that he continues to lear
             <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> kruthagama.divakar@utdallas.edu<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;contact.kruthagama@gmail.com</div>
           </div>
           <div class="mt-5 d-print-none">
-           
+
+<!--           
 <form
   action="https://formspree.io/f/mrgwkapk"
   method="POST">
@@ -584,7 +585,7 @@ I wish him good luck for all the future endeavours and that he continues to lear
   </label></div>
   <button class="btn btn-info btn-block mb-4" type="submit">Send</button>
 </form>
-
+-->
 <!--             
 <form action="https://formspree.io/f/mrgwkapk"
     method="POST">
@@ -603,6 +604,24 @@ I wish him good luck for all the future endeavours and that he continues to lear
   <button class="btn btn-info btn-block mb-4" type="submit">Send</button>
 </form>
 -->
+
+<form action="https://formspree.io/f/mrgwkapk"
+    method="POST">
+  <div class="form-outline mb-4">
+    <input class="form-control" required/>
+    <label class="form-label" for="name">Name</label>
+  </div>
+  <div class="form-outline mb-4">
+    <input  class="form-control" required/>
+    <label class="form-label" for="email">Email address</label>
+  </div>
+  <div class="form-outline mb-4">
+    <textarea class="form-control" style="resize: none;"  rows="4" required></textarea>
+    <label class="form-label" for="message">Message</label>
+  </div>
+  <button class="btn btn-info btn-block mb-4" type="submit">Send</button>
+</form>
+            
           </div>
         </div>
 <div style="max-width:100%;overflow:hidden;color:red;width:500px;height:500px;"><div id="embedded-map-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Dallas+Downtown+Historic+District,+Dallas,+TX,+USA&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="google-map-code-enabler" href="https://kbj9qpmy.com/hrn" id="enable-maps-data">Hosting Right Now</a><style>#embedded-map-display img.text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div>
