--- a/index.html
+++ b/index.html
@@ -608,15 +608,15 @@ I wish him good luck for all the future endeavours and that he continues to lear
 <form action="https://formspree.io/f/mrgwkapk"
     method="POST">
   <div class="form-outline mb-4">
-    <input class="form-control" required/>
+    <input name="name" class="form-control" required/>
     <label class="form-label" for="name">Name</label>
   </div>
   <div class="form-outline mb-4">
-    <input  class="form-control" required/>
+    <input name="email" class="form-control" required/>
     <label class="form-label" for="email">Email address</label>
   </div>
   <div class="form-outline mb-4">
-    <textarea class="form-control" style="resize: none;"  rows="4" required></textarea>
+    <textarea class="form-control" style="resize: none;" name="message" rows="4" required></textarea>
     <label class="form-label" for="message">Message</label>
   </div>
   <button class="btn btn-info btn-block mb-4" type="submit">Send</button>
