--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           </div>
           <div class="timeline-body px-4 pb-4">
             <div class="text-muted text-small mb-3">May, 2023 - August, 2023</div>
-            <div>• Mastered the custom-built Smart Sheet solution for Project Portfolio Management and effectively supported and prioritised the intake of new projects into the tool.<br>
+            <div>• Mastered the custom-built Smart Sheet solution for Project Portfolio Management and effectively supported and prioritised the intake of 10 new projects into the tool.<br>
                  • Led Project Management Office(PMO) activities and coordinated resources within a broader portfolio.<br>
                  • Created workflows to streamline administrative tasks, contributing to enhanced team productivity.<br>
                  • Oversaw a $1M application migration as “Jr.Project Manager”, collaborating with stakeholders from different departments and facilitating communication between technical and non-technical teams.<br>
@@ -286,15 +286,18 @@
           <div class="timeline-body px-4 pb-4">
             <div class="text-muted text-small mb-3">November 2018 - June, 2022</div>
             <div><i>Senior Consultant&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;December 2021-June 2022</i><br>
-                •Initiated multiple product improvements and owned the entire product development life cycle.<br>
-                •Crafted a dynamic dashboard providing real-time project updates and KPIs to senior management.<br>
-                •Mentored six recruits and created an environment supportive of learning and innovation.<br><br>
+                •	Initiated multiple product improvements and owned the entire product development life cycle of 33 products.<br>
+                •	Designed project plans, clarified project scope and established project schedules across 4 different verticals.<br>
+                •	Led 4 agile teams to achieve project milestones, emphasizing collaboration and adherence to Agile principles.<br>
+                • Crafted a dynamic dashboard that provided real-time project updates and KPIs to senior management, resulting in a 25% reduction in inquiries and a 30% increase in informed decision-making speed.<br>
+                • Mentored six recruits and created an environment supportive of learning and innovation.<br><br>
                  <i>Consultant&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; December 2020-December 2021</i><br>
                 •Collected, Cleansed and provided reports and analysis for vulnerability mitigation on 750+ servers.<br>
-                •Automated 60% of daily reports using RPA and JAVA.<br><br>
+                •	Collaborated with cross-functional teams to drive project success and reach milestones on time and within budget.<br>
+                •	Automated 60% of daily reports using RPA and JAVA, leading to a 90% reduction in error rates.<br><br>
                 <i>Associate Consultant&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;November 2018-December 2020</i><br>
-                •Optimised service delivery by improving documentation and software guidelines for a Fortune 500 client.<br>
-                •Formulated and implemented user acceptance test cases, contributing to release readiness evaluations.<br>
+                • Optimised service delivery by improving documentation and software guidelines for a Fortune 500 client.<br>
+                • Formulated and implemented user acceptance test cases, contributing to release readiness evaluations.<br>
             </div>
           </div>
         </div>
