--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
           </div>
           <div class="timeline-body px-4 pb-4">
             <div class="text-muted text-small mb-3">March, 2023</div>
-            <div>•Observed how agile methodologies are implemented in IT projects.<br>
-                 •Demonstrated expertise in the understanding of project plan, project scope and project schedule.<br>
+            <div>• Observed how agile methodologies are implemented in IT projects.<br>
+                 • Demonstrated expertise in the understanding of project plan, project scope and project schedule.<br>
            </div>
           </div>
         </div>
@@ -297,6 +297,7 @@
                 •	Automated 60% of daily reports using RPA and JAVA, leading to a 90% reduction in error rates.<br><br>
                 <i>Associate Consultant&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;November 2018-December 2020</i><br>
                 • Optimised service delivery by improving documentation and software guidelines for a Fortune 500 client.<br>
+                •	Simplified client requirements into user stories, resulting in a 40% reduction in delivery time.<br>
                 • Formulated and implemented user acceptance test cases, contributing to release readiness evaluations.<br>
             </div>
           </div>
@@ -308,8 +309,8 @@
           </div>
           <div class="timeline-body px-4 pb-4">
             <div class="text-muted text-small mb-3">January 2015 - March, 2019</div>
-            <div>•Facilitated learning for more than 600 students, imparting JAVA programming skills.<br>
-                •Managed staffing, rooster, finances and comprehensive risk management across four branches.<br>
+            <div>• Facilitated learning for more than 600 students, imparting JAVA programming skills.<br>
+                 • Managed staffing, rooster, finances and comprehensive risk management across four branches.<br>
             </div>
           </div>
         </div>
@@ -320,8 +321,8 @@
           </div>
           <div class="timeline-body px-4 pb-4">
             <div class="text-muted text-small mb-3">April, 2016 - December, 2017</div>
-            <div>•Identified an area of underperforming product sales and formulated campaigns that increased the company’s annual sales by 30%.<br>
-                •Delegated tasks effectively while organizing city and national level RedBull events.<br>
+            <div>• Identified an area of underperforming product sales and formulated campaigns that increased the company’s annual sales by 30%.<br>
+                 • Delegated tasks effectively while organizing city and national level RedBull events.<br>
 
            </div>
           </div>
