--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <div>• Mastered the custom-built Smart Sheet solution for Project Portfolio Management and effectively supported and prioritised the intake of 10 new projects into the tool.<br>
                  • Led Project Management Office(PMO) activities and coordinated resources within a broader portfolio.<br>
                  • Created workflows to streamline administrative tasks, contributing to enhanced team productivity.<br>
-                 • Oversaw a $1M application migration as “Jr.Project Manager”, collaborating with stakeholders from different departments and facilitating communication between technical and non-technical teams.<br>
+                 • Oversaw a $1M application migration as “Jr.Project Manager”, collaborating with stakeholders from different departments and managing communication between technical and non-technical teams.<br>
             </div>
           </div>
         </div>
