--- a/index.html
+++ b/index.html
@@ -287,18 +287,23 @@
             <div class="text-muted text-small mb-3">November 2018 - June, 2022</div>
             <div><i>Senior Consultant&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;December 2021-June 2022</i><br>
                 •	Initiated multiple product improvements and owned the entire product development life cycle of 33 products.<br>
-                •	Designed project plans, clarified project scope and established project schedules across 4 different verticals.<br>
-                •	Led 4 agile teams to achieve project milestones, emphasizing collaboration and adherence to Agile principles.<br>
-                • Crafted a dynamic dashboard that provided real-time project updates and KPIs to senior management, resulting in a 25% reduction in inquiries and a 30% increase in informed decision-making speed.<br>
-                • Mentored six recruits and created an environment supportive of learning and innovation.<br><br>
+                •	Designed project roadmaps, plans, and milestones as per business objectives across 4 different verticals.<br>
+                •	Created WBS and effectively allocated tasks to members, optimizing the utilization of project resources.<br>
+                •	Led 4 agile teams, proactively identified risks and updated the PMO Director about project slippage and scope creep.<br>
+                •	Crafted a dynamic dashboard that provided real-time project updates and KPIs to senior management, resulting in a 25% reduction in inquiries and a 30% increase in informed decision-making speed.<br><br>
                  <i>Consultant&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; December 2020-December 2021</i><br>
-                • Collected, Cleansed and provided reports and analysis for vulnerability mitigation on 750+ servers.<br>
+                •	Owned Communication in daily stand-ups, backlog planning, sprint planning and retrospective meetings.<br>
                 •	Collaborated with cross-functional teams to drive project success and reach milestones on time and within budget.<br>
-                •	Automated 60% of daily reports using RPA and JAVA, leading to a 90% reduction in error rates.<br><br>
-                <i>Associate Consultant&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;November 2018-December 2020</i><br>
-                • Optimised service delivery by improving documentation and software guidelines for a Fortune 500 client.<br>
-                •	Simplified client requirements into user stories, resulting in a 40% reduction in delivery time.<br>
-                • Formulated and implemented user acceptance test cases, contributing to release readiness evaluations.<br>
+                •	Automated 60% of daily reports using RPA and JAVA, leading to a 90% reduction in error rates.<br>
+                •	Collected, Cleansed and provided reports and analysis for vulnerability mitigation on 750+ servers.<br>
+                •	Worked with Project Managers to eliminate roadblocks and implemented process workflows that increased project efficiency by 20%.<br>
+                •	Mentored 6 recruits and created an environment supportive of learning and innovation.<br><br>
+                 <i>Associate Consultant&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;November 2018-December 2020</i><br>
+                •	Measured team’s daily SLA metrics and published SLA dashboards in MS Excel, using pivot tables and macros.<br>
+                •	Provided Product Demos on SAAS products to senior product owners and received signoff to own product life cycle.<br>
+                •	Optimised service delivery by improving documentation and software guidelines for a Fortune 500 client.<br>
+                •	Simplified client requirements into efficient user stories, resulting in a 40% reduction in delivery time.<br>
+                •	Formulated and implemented user acceptance test cases, contributing to release readiness evaluations.<br>
             </div>
           </div>
         </div>
