--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
           <div class="m-4 mt-md-2">
             <p class="text-teal text-small">RoadMap / Innovation / Value Creation / Strategy / ROI</p>
             <h3>Product</h3>
-            <p class="text-muted">(1)Traced the Evolution, Adoption, and Impact of Google’s Mobile Payment Platform; (2) Created a Product Roadmap for a Home Décor Mobile Application launch.</p>
+            <p class="text-muted">(1)Traced the Evolution, Adoption, and Impact of Google Pay; (2) Created a Product Roadmap and go-to-market strategy for a Home Décor Mobile Application launch.</p>
           </div>
         </div>
       </div>
